--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,3 @@
-/* 
-    Document   : main
-    Created on : 20.04.2011, 22:09:32
-    Author     : CodeInfection
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
 #progress {
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
@@ -23,7 +15,6 @@
     text-align: center;
     display: none;
 }
-
 #debug {
     padding: 5px;
     border: 1px solid red;
@@ -35,7 +26,6 @@
     font-family: 'Lucida Console', Verdana, Arial;
     z-index: 200;
 }
-
 #contextmenu {
     display: none;
     position: absolute;
@@ -48,7 +38,6 @@
     -webkit-border-radius: 5px;
     -khtml-border-radius: 5px;
 }
-
 #player_overlay, #world_overlay, #ban_overlay {
     display: none;
     position: absolute;
@@ -56,18 +45,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,.6);
+    background-color: rgba(0, 0, 0, .6);
     overflow: auto;
 }
-
 a.back:hover {
     cursor: pointer;
 }
-
 #plugin .contentSlide div {
     display: none;
 }
-
 div.touchTooltip {
     position: absolute;
     z-index: 110;
@@ -75,5 +61,15 @@ div.touchTooltip {
     -webkit-border-radius: 3px;
     border-radius: 3px;
     color: #FFF;
-    padding: 3px;
+    word-wrap: break-word;
+}
+div.touchTooltip div {
+    margin: 3px;
+}
+div.playerhead {
+    /*display: inline-block;*/
+    width: 8px;
+    height: 8px;
+    background-position: -8px -8px;
+    float: left;
 }
