--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
     -moz-border-radius: 10px;
     -khtml-border-radius: 10px;
     border-radius: 10px;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0,0,0,0.7);
     color: white;
     font-size: 18px;
     font-weight: bold;
@@ -14,17 +14,6 @@
     z-index: 200;
     text-align: center;
     display: none;
-}
-#debug {
-    padding: 5px;
-    border: 1px solid red;
-    position: fixed;
-    bottom: 10px;
-    left: 10px;
-    background: white;
-    color: black;
-    font-family: 'Lucida Console', Verdana, Arial;
-    z-index: 200;
 }
 #contextmenu {
     display: none;
@@ -45,7 +34,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .6);
+    background-color: rgba(0,0,0,0.6);
     overflow: auto;
 }
 a.back:hover {
@@ -57,7 +46,7 @@ a.back:hover {
 div.touchTooltip {
     position: absolute;
     z-index: 110;
-    background: rgba(0, 0, 0, .7);
+    background: rgba(0,0,0,0.7);
     -webkit-border-radius: 3px;
     border-radius: 3px;
     color: #FFF;
