--- a/css/main.css
+++ b/css/main.css
@@ -59,9 +59,10 @@ div.touchTooltip div {
     margin: 3px;
 }
 div.playerhead {
-    /*display: inline-block;*/
-    width: 8px;
-    height: 8px;
+    display: block;
+    float: right;
+    width: 24px;
+    height: 24px;
     background-position: -8px -8px;
     float: left;
 }
