--- a/css/main.css
+++ b/css/main.css
@@ -15,18 +15,6 @@
     text-align: center;
     display: none;
 }
-#contextmenu {
-    display: none;
-    position: absolute;
-    z-index: 200;
-    background-color: white;
-    padding: 8px;
-    border: 1px solid black;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    -khtml-border-radius: 5px;
-}
 .overlay {
     display: none;
     position: absolute;
@@ -39,6 +27,9 @@
 }
 .overlay div.spacer {
     height: 6px;
+}
+.overlay h2 {
+    color: white !important;
 }
 a.back:hover {
     cursor: pointer;
