moved the jquery scripts and styles to an own directory and added to jQuery Mobile images

--- a/res/css/main.css
+++ b/res/css/main.css
@@ -122,3 +122,6 @@ div#console_viewbox > div > div.logtype_severe:hover {
 /*div#console_viewbox div.logtype_ {
 
 }*/
+div#copyright {
+    text-align: center;
+}
