--- a/res/css/main.css
+++ b/res/css/main.css
@@ -1,35 +1,5 @@
-#progress {
-    -webkit-border-radius: 10px;
-    -moz-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    border-radius: 10px;
-    background-color: rgba(0,0,0,0.7);
-    color: white;
-    font-size: 18px;
-    font-weight: bold;
-    position: absolute;
-    width: 100px;
-    padding: 20px 31px;
-    margin: 120px 0;
-    z-index: 200;
-    text-align: center;
-    display: none;
-}
-.overlay {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0,0,0,0.6);
-    overflow: auto;
-}
-.overlay div.spacer {
-    height: 6px;
-}
-.overlay h2 {
-    color: white !important;
+div.clear {
+    clear: both;
 }
 a.back:hover {
     cursor: pointer;
@@ -75,10 +45,30 @@ div.touchTooltip div {
 /**
  * Page - player
  */
+ #player_primary_info {
+     margin-bottom: 5px;
+ }
 #player_head {
+    float: left;
+}
+#player_head img {
     display: block;
     width: 80px;
     height: 80px;
+}
+#player_names {
+    padding-top: 15px;
+    float: left;
+    height: 80px;
+    margin-left: 15px;
+}
+#player_displayname a {
+    color: black;
+}
+#player_name {
+    font-size: 75%;
+    margin-top: -4px;
+    margin-left: 20px;
 }
 #player_health, #player_armor {
     margin-bottom: -3px;
