--- a/res/css/main.css
+++ b/res/css/main.css
@@ -156,6 +156,7 @@ div#console_viewbox > div > div.logtype_severe:hover {
  */
 div[data-role=footer] {
     text-align: center;
+    padding: 3px;
 }
 div[data-role=footer] a {
     color: #CCC;
